--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             href="./documents/taxis_nro-10_2025.pdf"
             target="_blank"
             class="btn"
-            >Descargar Taxis Volumen 10 (PDF)</a
+            >Descargar Volumen 10 (PDF)</a
           >
         </div>
       </div>
