--- a/pages/about.html
+++ b/pages/about.html
@@ -15,9 +15,7 @@
 
   <body class="about">
     <nav>
-      <a href="../index.html"
-        ><img src="../img/escudo.png" alt="Ir al inicio"
-      /></a>
+      <a href="../"> <img src="../img/escudo.png" alt="Ir al inicio" /></a>
       <ul>
         <li><a href="../pages/team.html">Equipo</a></li>
         <li>
