--- a/pages/team.html
+++ b/pages/team.html
@@ -15,9 +15,7 @@
 
   <body class="about">
     <nav>
-      <a href="../index.html"
-        ><img src="../img/escudo.png" alt="Ir al inicio"
-      /></a>
+      <a href="../"><img src="../img/escudo.png" alt="Ir al inicio" /></a>
       <ul>
         <li><a style="pointer-events: none; font-weight: 800">Equipo</a></li>
         <li><a href="../pages/about.html">Sobre Revista Taxis</a></li>
